--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -173,6 +173,9 @@
         "tailwindcss": "^2.0.3",
         "typescript": "^5.0.4"
     },
+    "engines": {
+        "node" : ">=16.10.0 <17.0.0"
+    },
     "browserslist": [
         ">0.2%",
         "not dead",
