--- a/image/templates/helm/stackrox-secured-cluster/values-public.yaml.example
+++ b/image/templates/helm/stackrox-secured-cluster/values-public.yaml.example
@@ -237,6 +237,7 @@
 #  #   - EBPF
 #  #   - CORE_BPF
 #  #   - NO_COLLECTION
+#  # Note that CORE_BPF method is in Tech Preview stage.
 #  collectionMethod: EBPF
 #
 #  # Configure usage of taint tolerations. If `false`, tolerations are applied to collector,
