--- a/scanner/Makefile
+++ b/scanner/Makefile
@@ -42,9 +42,13 @@ endif
 BUILD_FLAGS := CGO_ENABLED=0 GOOS=linux GOARCH=${GOARCH}
 BUILD_CMD := go build -trimpath -ldflags="-X github.com/stackrox/stackrox/scanner/v4/internal/version.Version=$(TAG)" -o image/scanner/bin/scanner ./cmd
 
-LOCAL_VOLUME_ARGS := -v$(CURDIR):/src:delegated -v $(GOPATH):/go:delegated
-GOPATH_WD_OVERRIDES := -w /src -e GOPATH=/go
-IMAGE_BUILD_FLAGS := -e $(BUILD_FLAGS)
+comma:= ,
+empty:=
+space:= $(empty) $(empty)
+
+LOCAL_VOLUME_ARGS := -v $(CURDIR):/src:delegated -v $(GOPATH):/go:delegated
+GOPATH_WD_OVERRIDES := -w /src
+IMAGE_BUILD_FLAGS := -e $(subst $(space),$(comma),$(BUILD_FLAGS)),GOPATH=/go
 
 #####################################################################
 ###### Binaries we depend on (need to be defined on top) ############
