--- a/.github/workflows/build-scanner.yaml
+++ b/.github/workflows/build-scanner.yaml
@@ -38,12 +38,11 @@ jobs:
     - name: Build Scanner and ScannerDB images
       run: make -C scanner images
 
-#    TODO: Push Scanner and ScannerDB images
-#    - name: Push Scanner and ScannerDB images
-#      # Skip for external contributions.
-#      if: |
-#        github.event_name == 'push' || !github.event.pull_request.head.repo.fork
-#      run: |
-#        source ./scripts/ci/lib.sh
-#        echo "Will determine context from: ${{ github.event_name }} & ${{ github.ref_name }}"
-#        push_scanner_image_set
+    - name: Push Scanner and ScannerDB images
+      # Skip for external contributions.
+      if: |
+        github.event_name == 'push' || !github.event.pull_request.head.repo.fork
+      run: |
+        source ./scripts/ci/lib.sh
+        echo "Will determine context from: ${{ github.event_name }} & ${{ github.ref_name }}"
+        push_scanner_image_set
